# kb-support

./: .gitignore  CLAUDE-REVIEWER.md  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260530_120000_init.py  20260530_140000_tickets_table.py  20260530_150000_ticket_num_seq.py  20260530_160000_ticket_history.py  20260530_170000_ticket_messages.py  20260601_120000_chat_uniq.py  20260602_120000_sla_tables.py  20260603_120000_sla_pauses.py  20260604_120000_automation.py  20260606_120000_canned.py  20260606_130000_email_msgid.py  20260608_120000_claims.py  20260610_120000_webhooks.py
backend/src/api/: __init__.py  config.py  errors.py  main.py
backend/src/api/analytics/: __init__.py  containment.py  deps.py  dto.py  metrics.py  period.py  report_schemas.py  reports.py  repository.py  router.py  schemas.py  service.py
backend/src/api/auth/: __init__.py  dependencies.py  jwks.py  jwt_verifier.py  principal.py  scopes.py  system_actors.py
backend/src/api/automation/: __init__.py  actions.py  assignment.py  engine.py  enums.py  matcher.py  metrics.py  models.py  repository.py  router.py  schemas.py  sla_breach.py  time_based.py
backend/src/api/automation/worker/: __init__.py  actor.py
backend/src/api/canned/: __init__.py  deps.py  models.py  render.py  repository.py  router.py  schemas.py  usage.py
backend/src/api/clients/: __init__.py  auth.py  base.py  cache.py  circuit_breaker.py  errors.py  factory.py  metrics.py  retry.py
backend/src/api/clients/acceptance_act/: __init__.py  adapter.py  deps.py  models.py  protocol.py
backend/src/api/clients/bank/: __init__.py  adapter.py  models.py  protocol.py
backend/src/api/clients/financial_ledger/: __init__.py  adapter.py  models.py  protocol.py
backend/src/api/db/: __init__.py  base.py
backend/src/api/email/: __init__.py  ingestion.py  metrics.py  outbound.py  parser.py
backend/src/api/notifications/: __init__.py  channels.py  dedup.py  dispatcher.py  labels.py
backend/src/api/observability/: __init__.py  context.py  health.py  logging.py  metrics.py  pii_mask.py  request_id.py
backend/src/api/sla/: __init__.py  assignment.py  calculator.py  matcher.py  models.py  repository.py  router.py  schemas.py
backend/src/api/tickets/: __init__.py  acceptance.py  acceptance_cascade.py  access.py  actions.py  case_payload.py  case_repository.py  case_state_machine.py  chat_return.py  claims_intake.py  claims_sla.py  decision_dispatch.py  enums.py  history.py  insurer_dispatch.py  messages.py  models.py  numbering.py  pagination.py  payout_dispatch.py  rating_metrics.py  repository.py  requester_context.py  router.py  schemas.py  sla_metrics.py  sla_pause.py  sla_query.py  sla_state.py  state_machine.py  suggested_articles.py
backend/src/api/webhooks/: __init__.py  dispatcher.py  enums.py  events.py  guarantee_inbound.py  inbound.py  models.py  repository.py  router.py  schemas.py  signing.py
backend/tests/contract/: conftest.py  test_smoke_contract.py
backend/tests/integration/: test_acceptance_act_api.py  test_acceptance_cascade.py  test_analytics_aggregation.py  test_analytics_boundary.py  test_analytics_rbac.py  test_assignment_strategies.py  test_automation_actions.py  test_automation_admin_api.py  test_automation_engine.py  test_automation_order.py  test_automation_repository.py  test_canned_admin_api.py  test_canned_repository.py  test_canned_usage.py  test_claims_model.py  test_claims_security.py  test_email_endpoint.py  test_email_ingestion.py  test_email_outbound.py  test_email_security.py  test_first_responded_at.py  test_guarantee_inbound.py  test_imap_poll.py  test_insurer_inbound.py  test_migration_automation.py  test_migration_canned.py  test_migration_sla.py  test_migration_tickets.py  test_notifications.py  test_observability.py  test_reports_aggregation.py  test_reports_endpoint.py  test_sla_admin_api.py  test_sla_assignment.py  test_sla_breach_escalation.py  test_sla_pause.py  test_sla_repository.py  test_sla_worker_scan.py  test_stats_endpoint.py  test_suggested_articles.py  (+6 more)
backend/tests/unit/: test_db_smoke.py  test_errors.py  test_healthz.py
backend/tests/unit/analytics/: test_containment.py  test_deps.py  test_metrics.py  test_period.py  test_reports.py  test_service.py
backend/tests/unit/auth/: conftest.py  test_dependencies.py  test_jwks.py  test_jwt_verifier.py  test_principal_supervisor.py
backend/tests/unit/automation/: test_actions.py  test_assignment.py  test_engine.py  test_enums.py  test_matcher.py  test_schemas.py  test_sla_breach.py  test_time_based.py  test_worker_actor.py
backend/tests/unit/canned/: test_render.py  test_usage.py
backend/tests/unit/clients/: test_base.py  test_cache.py  test_circuit_breaker.py  test_factory.py  test_metrics.py  test_retry.py
backend/tests/unit/email/: test_attachment_metrics.py  test_imap_actor.py  test_imap_client.py  test_ingestion_recovery.py  test_outbound.py  test_parser.py
backend/tests/unit/notifications/: test_channels.py  test_dispatcher.py
backend/tests/unit/observability/: test_logging.py  test_metrics.py  test_pii_mask.py  test_request_id.py
backend/tests/unit/sla/: test_calculator.py  test_matcher.py  test_models.py  test_schemas.py  test_worker_actor.py  test_worker_broker.py  test_worker_hooks.py  test_worker_scan.py
backend/tests/unit/tickets/: test_access.py  test_actions.py  test_case_payload.py  test_case_state_machine.py  test_chat_return.py  test_claims_intake.py  test_claims_sla.py  test_decision_dispatch.py  test_enums.py  test_from_chat.py  test_history.py  test_insurer_dispatch.py  test_messages.py  test_numbering.py  test_pagination.py  test_payout_dispatch.py  test_rating_metrics.py  test_requester_context.py  test_router_auth.py  test_schemas.py  test_sla_metrics.py  test_sla_pause.py  test_sla_state.py  test_state_machine.py  test_ticket_model.py
backend/tests/unit/webhooks/: test_dispatcher.py  test_events.py  test_signing.py
docs/: architecture.md  (+2 more)
(+185 files in other folders)
