[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-support"
version = "0.1.0"
description = "reHome customer support module (kb-support)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "ООО РЕХОМ" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.27,<0.28",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2",
    "prometheus-client>=0.21,<0.22",
    # Верификация Keycloak Bearer JWT (RS256/JWKS) — #29. [crypto] тянет cryptography.
    "pyjwt[crypto]>=2.8,<3",
    # Redis-кеш HTTP-клиентов к соседям (AT-003, E3-2). Часть утверждённого стека
    # (CLAUDE.md, ADR-0005 Решение 1, ADR-0006) — не новый сервис. Async: redis.asyncio.
    "redis>=5,<6",
    # SLA-таймеры (E4-6, #90). Стек предписывает Dramatiq (NFR-4.2, ADR-0007).
    # Actor config-gated: без broker URL — StubBroker, инертен (broker/worker — ops).
    "dramatiq>=1.16,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "ruff==0.7.4",
    "mypy>=1.13,<2",
    # Контрактные тесты (#4): валидация реальных ответов против docs/openapi.yaml
    # (OpenAPI 3.1 схемы = JSON Schema 2020-12). Тянет `referencing` для $ref.
    "jsonschema>=4.20,<5",
    # Парсинг OpenAPI yaml (контрактные тесты + scripts/generate_production_openapi.py).
    "pyyaml>=6,<7",
    # Type-stubs для mypy strict.
    "types-jsonschema",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "B008",  # FastAPI uses `Depends(...)` in defaults — intentional.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: strict
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
files = ["src", "tests"]
# dramatiq (1.18, py.typed) типизирован частично: конструкторы брокеров
# (StubBroker/RedisBroker) — untyped. Разрешаем их вызов, не ослабляя strict в целом.
untyped_calls_exclude = ["dramatiq"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/api"]
branch = true
# FastAPI TestClient выполняет ASGI-приложение в рабочем потоке (anyio portal),
# а async-SQLAlchemy исполняет DB-операции в greenlet'е. Без этого код эндпоинтов
# и репозитория не измеряется. Делает покрытие точнее.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
